# jcc

./: CMakeLists.txt  LICENSE
cmake/: Git.cmake  Platform.cmake
lib/jcc/: attributes.h  auto.h  code.h  error.h  example.h  flag.h  logs.h  macros.h  numeric.h  optional.h  platform.h  string.h  version.h
lib/jcc/compiler/: compiler.h  lexer.h
lib/jcc/platform/libc/: ERROR.interface.h  FILE.interface.h  MEMORY.interface.h  STRING.interface.h  TERMINAL_COLORS.interface.h  TIME.interface.h  error.interface.h  file.interface.h  string.interface.h  terminal_colors.interface.h  time.interface.h
src/: main.c
src/compiler/: lexer.c
src/compiler/c/: compiler.c  defs.h  lexer.c
src/core/: error.c  logs.c  string.c  version.c
src/versions/: jcc-compiler.c  jcc-core.c  jcc-lang-c.c  jcc.c
